--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </aside>
       <nav class="navbar navbar-expand-lg navbar-light compensate-for-scrollbar" id=navbar-main>
          <div class=container>
-            <div class="d-none d-lg-inline-flex"><a class=navbar-brand href=index.html>Khawar Islam</a></div>
+            <div class="d-none d-lg-inline-flex"><a class=navbar-brand href=index.html>Muhammad Nadeem</a></div>
             <button type=button class=navbar-toggler data-toggle=collapse data-target=#navbar-content aria-controls=navbar aria-expanded=false aria-label="Toggle navigation">
             <span><i class="fas fa-bars"></i></span></button>
             <div class="navbar-brand-mobile-wrapper d-inline-flex d-lg-none"><a class=navbar-brand href=index.html>Khawar Islam</a></div>
