--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="d-none d-lg-inline-flex"><a class=navbar-brand href=index.html>Muhammad Nadeem</a></div>
             <button type=button class=navbar-toggler data-toggle=collapse data-target=#navbar-content aria-controls=navbar aria-expanded=false aria-label="Toggle navigation">
             <span><i class="fas fa-bars"></i></span></button>
-            <div class="navbar-brand-mobile-wrapper d-inline-flex d-lg-none"><a class=navbar-brand href=index.html>Khawar Islam</a></div>
+            <div class="navbar-brand-mobile-wrapper d-inline-flex d-lg-none"><a class=navbar-brand href=index.html>Muhammad Nadeem</a></div>
             <div class="navbar-collapse main-menu-item collapse justify-content-start" id=navbar-content>
                <ul class="navbar-nav d-md-inline-flex">
                   <li class=nav-item><a class=nav-link href=index.html#about data-target=#about><span>Home</span></a></li>
@@ -468,7 +468,7 @@
                         <h3 class="article-title mb-0 mt-0"><a>Face Pyramid Vision Transformer</a></h3>
                         <div class=article-style>[<strong>BMVC 2022</strong>] We introduce a simple yet effective optimized approach, O-PVT for general and age-invariant face recognition.</div>
                         <div class="stream-meta article-metadata">
-                           <div><span>Khawar Islam</span></div>
+                           <div><span>Muhammad Nadeem</span></div>
                         </div>
                      </div>
                      <div class=ml-3><a href=publication/mai/index.html><img src=publication/mai/featured_hu8ae8226837390495b2aef10736d01010_1514910_150x0_resize_lanczos_2.png alt></a></div>
@@ -478,7 +478,7 @@
                         <h3 class="article-title mb-0 mt-0"><a>Video-based Person Re-Identification: A Survey</a></h3>
                         <div class=article-style>[<strong>IJCAI 2022 (Under Review)</strong>] This paper presents a comprehensive review on global appearance, local part alignment methods, graph learning, attention and transformer model.</div>
                         <div class="stream-meta article-metadata">
-                           <div><span>Khawar Islam</span>, <span>Shuoyi Chen</span>, <span>Mang Ye</span></div>
+                           <div><span></span>, <span>Shuoyi Chen</span>, <span>Mang Ye</span></div>
                         </div>
                      </div>
                   </div>
