--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="d-none d-lg-inline-flex"><a class=navbar-brand href=index.html>Muhammad Nadeem</a></div>
             <button type=button class=navbar-toggler data-toggle=collapse data-target=#navbar-content aria-controls=navbar aria-expanded=false aria-label="Toggle navigation">
             <span><i class="fas fa-bars"></i></span></button>
-            <div class="navbar-brand-mobile-wrapper d-inline-flex d-lg-none"><a class=navbar-brand href=index.html>Muhammad Nadeem</a></div>
+            <div class="navbar-brand-mobile-wrapper d-inline-flex d-lg-none"><a class=navbar-brand href=index.html>M Nadeem</a></div>
             <div class="navbar-collapse main-menu-item collapse justify-content-start" id=navbar-content>
                <ul class="navbar-nav d-md-inline-flex">
                   <li class=nav-item><a class=nav-link href=index.html#about data-target=#about><span>Home</span></a></li>
