--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
       <meta property="twitter:card" content="summary_large_image">
       <meta property="twitter:site" content="@CMHungSteven">
       <meta property="twitter:creator" content="@CMHungSteven">
-      <meta property="og:site_name" content="Khawar Islam">
-      <meta property="og:url" content="https://khawar-islam.github.io/">
+      <meta property="og:site_name" content="Muhammad Nadeem">
+      <meta property="og:url" content="https://mnadeem.github.io/">
       <meta property="og:title" content="Khawar Islam">
       <meta property="og:description" content="Muhammad Nadeem personal website. Applied Research Scientist @ CVPR Lab, Seoul, South Korea. Edge-AI Research and Development.">
-      <meta property="og:image" content="author/profile/khawar_islam.jpg">
-      <meta property="twitter:image" content="author/profile/khawar_islam.jpg">
+      <meta property="og:image" content="author/profile/nadeem.jpg">
+      <meta property="twitter:image" content="author/profile/nadeem.jpg">
       <meta property="og:locale" content="en-us">
       <script type=application/ld+json>{"@context":"https://schema.org","@type":"WebSite","potentialAction":{"@type":"SearchAction","target":"https://minhungchen.netlify.app?q={search_term_string}","query-input":"required name=search_term_string"},"url":"https://minhungchen.netlify.app"}</script>
       <title>Muhammad Nadeem</title>
@@ -103,7 +103,7 @@
                   <div id=profile>
                      <img class="avatar avatar-circle" src=author/profile/nadeem.jpg alt="Muhammad Nadeem">
                      <div class=portrait-title>
-                        <h2>Muhammad Nadeem</h2>
+                        <h2>M Nadeem</h2>
                         <h3>Research Scientist-Computer Vision</h3>
                         <h3><a href=https://cvpr.sejong.ac.kr/ Seoul, South Korea.com/en-us/overview/ai-platform target=_blank rel=noopener><span>CVPR Lab, Seoul, South Korea</span></a></h3>
                      </div>
