--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <div id=profile>
                      <img class="avatar avatar-circle" src=author/profile/nadeem.jpg alt="Muhammad Nadeem">
                      <div class=portrait-title>
-                        <h2>M Nadeem</h2>
+                        <h2>M.Nadeem</h2>
                         <h3>Research Scientist-Computer Vision</h3>
                         <h3><a href=https://cvpr.sejong.ac.kr/ Seoul, South Korea.com/en-us/overview/ai-platform target=_blank rel=noopener><span>CVPR Lab, Seoul, South Korea</span></a></h3>
                      </div>
