--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
                   <h1>About Me</h1>
                   <p>My name is Muhammad Nadeem. I am working as a <strong>Research Scientist-Computer Vision</strong> at
                      <a href=http://cvpr.sejong.ac.kr/index.html target=_blank rel=noopener>CVPR, Seoul, South Korea</a>, working on <strong>Cutting-edge AI Research </strong> on image classification, object detection and segmentation tasks. I received my MS degree from Sejong University, advised by
-                     <a href=https://scholar.google.com/citations?hl=en&user=eFKUKPwAAAAJ&view_op=list_works&sortby=pubdate target=_blank rel=noopener>Prof. Hyeonjoon Moon</a>. As a Master student I worked as a student researcher at
-                     <a href=http://cvpr.sejong.ac.kr/index.html target=_blank rel=noopener>CVPR Lab</a>, working on deep learning research for sewer defect classification, image compression, face recognition and vision transformer.
+                     <a href=https://scholar.google.com/citations?hl=en&user=eFKUKPwAAAAJ&view_op=list_works&sortby=pubdate target=_blank rel=noopener>Prof. Hyeonjoon Moon</a>.
                   </p>
                   <p><strong>PhD Plan (In Future):</strong> I am aiming to work on <strong>learning with noisy labels, data augmentation methods, contrastive learning</strong>, etc. In addition, I have also conducted extensive researches on face recognition, person search, person re-identification and vision transformer.</p>
                   <p>If you have any query, please drop me an email: <a href="mailto:muhammad.nadeem23064@gmail.com">My Email</a></p>
