--- a/index.html
+++ b/index.html
@@ -173,11 +173,9 @@
                <div class="col-12 col-lg-8">
                   <ul>
                     <li><em>Mar. 2022</em>: I joined the AI Research Team at
-                      <a href=http://coremaxtech.com/ target=_blank rel=noopener>COREMAX, Seoul, South Korea</a> as a <strong>Applied Research Scientist - Computer Vision</strong>, working on Cutting-edge AI Research on Self-Supervised learning for images.
+                      <a href=https://eng.sejong.ac.kr/index.do target=_blank rel=noopener>CVPR Lab, Seoul, South Korea</a> as a <strong>Applied Research Scientist - Computer Vision</strong>, working on Cutting-edge AI Research on Self-Supervised learning for images.
                    </li>
-                     <li><em>Feb. 2022</em>: 2 survey papers submitted into <strong>IJCAI 2022</strong>.</li>
-                     <li><em>Jan. 2022</em>: I will be serving as a conference reviewer for <strong>ICPR 2022</strong>.</li>
-                     <li><em>Jan. 2022</em>: 1 paper submitted into <strong>ICPR 2022</strong>.</li>
+                     <li><em>Jan. 2024</em>: 1 paper submitted into <strong>Crop Protection (Elsevier)</strong>.</li>
                      
                   </ul>
                </div>
@@ -207,7 +205,7 @@
                         <div class=card>
                            <div class=card-body>
                               <h4 class="card-title exp-title text-muted mt-0 mb-1">Applied Research Scientist - Computer Vision</h4>
-                              <h4 class="card-title exp-company text-muted my-0"><a href=http://coremaxtech.com/ target=_blank rel=noopener>CVPR Lab, Seoul, South Korea</a></h4>
+                              <h4 class="card-title exp-company text-muted my-0"><a href=https://eng.sejong.ac.kr/index.do target=_blank rel=noopener>CVPR Lab, Seoul, South Korea</a></h4>
                               <div class="text-muted exp-meta">Mar 2022 –
                                  Present
                                  <span class=middot-divider></span><span>Seoul, South Korea</span>
