--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
       </script><script src=../cdnjs.cloudflare.com/ajax/libs/fuse.js/3.2.1/fuse.min.js integrity="sha256-VzgmKYmhsGNNN4Ph1kMW+BjoYJM2jV5i4IlFoeZA9XI=" crossorigin=anonymous></script><script src=../cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/jquery.mark.min.js integrity="sha256-4HLtjeVgH0eIB3aZ9mLYF6E8oU5chNdjU6p6rrXpl9U=" crossorigin=anonymous></script><script>if(window.netlifyIdentity){window.netlifyIdentity.on("init",user=>{if(!user){window.netlifyIdentity.on("login",()=>{document.location.href="admin/index.html";});}});}</script><script src=js/academic.min.37431be2d92d7fb0160054761ab79602.js></script>
       <div class=container>
          <footer class=site-footer>
-            <p class=powered-by>© 2020 Khawar Islam</p>
+            <p class=powered-by>© 2020 Muhammad Nadeem</p>
             <p class=powered-by>Powered by the
                <a href=https://sourcethemes.com/academic/ target=_blank rel=noopener>Academic theme</a> for
                <a href=https://gohugo.io/ target=_blank rel=noopener>Hugo</a>.
