--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                      </form>
                   </div>
                   <ul class=fa-ul>
-                     <li><i class="fa-li fab fa-linkedin fa-2x" aria-hidden=true></i><a href=https://www.linkedin.com/in/khawarislam/ target=_blank rel=noopener>DM me (LinkedIn)</a></li>
+                     <li><i class="fa-li fab fa-linkedin fa-2x" aria-hidden=true></i><a href=https://www.linkedin.com/in/mnadeem12/ target=_blank rel=noopener>DM me (LinkedIn)</a></li>
                   </ul>
                </div>
             </div>
