--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                               <h4 class="card-title exp-company text-muted my-0"><a href=https://avialdosolutions.com/ target=_blank rel=noopener>Avialdo Solution</a></h4>
                               <div class="text-muted exp-meta">Feb 2015 –
                                  Mar 2015
-                                 <span class=middot-divider></span><span>Karachi, Pakistan</span>
+                                 <span class=middot-divider></span><span>Lahore, Pakistan</span>
                               </div>
                               <div class=card-text>I worked on Objective-C and some frameworks such as AVFoundation, etc. <br> Learn UI concepts and collaborate with a team lead for daily tasks.
 
