--- a/index.html
+++ b/index.html
@@ -229,6 +229,32 @@
                         </div>
                      </div>
                   </div>
+                  <div class="row experience">
+                     <div class="col-auto text-center flex-column d-none d-sm-flex">
+                        <div class="row h-50">
+                           <div class="col border-right">&nbsp;</div>
+                           <div class=col>&nbsp;</div>
+                        </div>
+                        <div class=m-2><span class="badge badge-pill border">&nbsp;</span></div>
+                        <div class="row h-50">
+                           <div class="col border-right">&nbsp;</div>
+                           <div class=col>&nbsp;</div>
+                        </div>
+                     </div>
+                     <div class="col py-2">
+                        <div class=card>
+                           <div class=card-body>
+                              <h4 class="card-title exp-title text-muted mt-0 mb-1">DeepLearning Engineer (Research Associate)</h4>
+                              <h4 class="card-title exp-company text-muted my-0"><a href=https://khi.nu.edu.pk/ target=_blank rel=noopener>NUCES-FAST, Video Surveillance Lab</a></h4>
+                              <div class="text-muted exp-meta">May 2019 –
+                                 Dec 2019
+                                 <span class=middot-divider></span><span>Karachi, Pakistan</span>
+                              </div>
+                              <div class=card-text>I performed research and development to solve missing children problems across the country. <br>I have developed age-invariant face recognition system with iOS mobile application.
+                              </br>                              </div>
+                           </div>
+                        </div>
+                     </div>
                   </div>
                   <div class="row experience">
                      <div class="col-auto text-center flex-column d-none d-sm-flex">
@@ -249,7 +275,7 @@
                               <h4 class="card-title exp-company text-muted my-0"><a href=https://avialdosolutions.com/ target=_blank rel=noopener>Avialdo Solution</a></h4>
                               <div class="text-muted exp-meta">Feb 2015 –
                                  Mar 2015
-                                 <span class=middot-divider></span><span>Lahore, Pakistan</span>
+                                 <span class=middot-divider></span><span>Karachi, Pakistan</span>
                               </div>
                               <div class=card-text>I worked on Objective-C and some frameworks such as AVFoundation, etc. <br> Learn UI concepts and collaborate with a team lead for daily tasks.
 
