--- a/index.html
+++ b/index.html
@@ -228,6 +228,19 @@
                            <div class=col>&nbsp;</div>
                         </div>
                      </div>
+                     <div class="col py-2">
+                        <div class=card>
+                           <div class=card-body>
+                              <h4 class="card-title exp-title text-muted mt-0 mb-1">Student Researcher</h4>
+                              <h4 class="card-title exp-company text-muted my-0"><a href=http://cvpr.sejong.ac.kr/index.html target=_blank rel=noopener>Computer Vision and Pattern Recognition Lab</a></h4>
+                              <div class="text-muted exp-meta">Mar 2020 –
+                                 Feb 2022
+                                 <span class=middot-divider></span><span>Seoul, South Korea</span>
+                              </div>
+                              <div class=card-text>I proposed a new SOTA method that were published in CVPRw hosted by Google Research.<br>I worked on face recognition problem with limited data and resources with Prof. Hyeonjoon Moon.<br></div>
+                           </div>
+                        </div>
+                     </div>
                   </div>
                   <div class="row experience">
                      <div class="col-auto text-center flex-column d-none d-sm-flex">
@@ -244,7 +257,7 @@
                      <div class="col py-2">
                         <div class=card>
                            <div class=card-body>
-                              <h4 class="card-title exp-title text-muted mt-0 mb-1">DeepLearning Engineer (Research Associate)</h4>
+                              <h4 class="card-title exp-title text-muted mt-0 mb-1">Deep Learning Engineer (Research Associate)</h4>
                               <h4 class="card-title exp-company text-muted my-0"><a href=https://khi.nu.edu.pk/ target=_blank rel=noopener>NUCES-FAST, Video Surveillance Lab</a></h4>
                               <div class="text-muted exp-meta">May 2019 –
                                  Dec 2019
