--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                  Feb 2022
                                  <span class=middot-divider></span><span>Seoul, South Korea</span>
                               </div>
-                              <div class=card-text>I proposed a new SOTA method that were published in CVPRw hosted by Google Research.<br>I worked on face recognition problem with limited data and resources with Prof. Hyeonjoon Moon.<br></div>
+                              <div class=card-text>I proposeds a new SOTA method that were published in CVPRw hosted by Google Research.<br>I worked on face recognition problem with limited data and resources with Prof. Hyeonjoon Moon.<br></div>
                            </div>
                         </div>
                      </div>
