--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                         <h3 class="article-title mb-0 mt-0">LADNet: A Lightweight Attention-Driven Network for Accurate Wheat Diseases Recognition (Under Review)</a></h3>
                         <div class=article-style>[<strong>Crop Protection, Elsevier, 2023</strong>]</div>
                         <div class="stream-meta article-metadata">
-                           <div><span>Muhammad Nadeem/span></span></div>
+                           <div><span>Muhammad Nadeem</span></div>
                         </div>
                         </div>
                      </div>
